[package]
name = "rsa-securid"
version = "0.1.0"
authors = ["Alpha Chen <alpha@kejadlen.dev>"]
edition = "2018"

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
bytes = "0.5"
clap = "2.33"
chrono = "0.4"
futures = "0.3"
openssl = "0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
